Closed Bug 1109424 Opened 11 years ago Closed 11 years ago

Don't treat event regions as opaque for plugin geometry

Categories

(Core :: Layout, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

No description provided.
When computing plugin geometry, we can mistakenly treat event regions as opaque. To get this failure to reproduce locally I had to fix a bug in the failing test (it did not disable CTP for the test plugin).
Attachment #8534126 - Flags: review?(roc)
I did a try push with event-regions enabled which includes this patch to https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=ffa1a73cd938. It does fix the failing test.
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: