Don't treat event regions as opaque for plugin geometry. (bug 1109424, r=roc)